# m8flow

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  LICENSE  README.md  postgres-redis-docker-compose.yml  rclone.conf  run_m8flow_backend.sh  sample.env  start_dev.ps1  start_dev.sh  upstream.sources.json  uvicorn-log.yaml
.devcontainer/: devcontainer.forlater.json
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: documentation.md  feature.md
.github/pull_request_template/: bugfix.md  documentation.md  feature.md
.github/pull_request_template_tmp/: bugfix.md
.github/scripts/: wait-for-e2e-stack.sh
.github/workflows/: README.md  build-base-image.yml  build_docker_images.yml  check-migrations.yml  check-upstream.yml  ci.yml  codex-pr-review.yml  container_retention_policy.yml  deploy-aws.yml  deploy-dev.yml  deploy-docker.yml  deploy-prod.yml  deploy-qa.yml  e2e-tests.yml  pr-notification.yml  rollback.yml  snyk-security.yml  sync-upstream.yml
connector-proxy-demo/: app.py  pyproject.toml
docker/: DEPLOYMENT.md  README.md  dev.Dockerfile  dev.docker-compose.yml  docker-compose.yml  editor.docker-compose.yml  keycloak-entrypoint.sh  keycloak-init-realms.sh  m8flow-docker-compose.prod.yml  m8flow-docker-compose.yml  m8flow-nats-docker-compose.yml  m8flow.Dockerfile  m8flow.backend.Dockerfile  m8flow.connector-proxy.Dockerfile  m8flow.frontend.Dockerfile  m8flow.keycloak.Dockerfile  m8flow.python-base.Dockerfile  minio.local-dev.docker-compose.yml  minio.production.docker-compose.yml  minio_mc_init.sh  nginx-keycloak-proxy.conf  promtail-config.yaml
docker/grafana/dashboards/: m8flow-unified-logs.json
docker/scripts/: m8flow_backend_entrypoint.sh  m8flow_frontend_entrypoint.sh
docs/: README.md  ci-validations.md  docker-base-image.md  env-reference.md  grafana-keycloak.md  grafana-logs.md  pre-commit-configuration.md  requirements.txt  shared-realm-organization-group-role-mapping.md  upstream-sync-workflow.md
docs/event-driven/: event-driven-architecture.md  event-driven-code-explanation.md  event-driven-quickstart.md
extensions/: README.md  app.py  auth_config_on_demand_patch.py  auth_exclusion_patch.py  auth_token_error_patch.py  authentication_controller_patch.py  authentication_service_patch.py  authorization_service_patch.py  bootstrap.py  cookie_path_patch.py  cors_fallback_middleware.py  create_user_tenant_scope_patch.py  decode_token_debug_patch.py  env_var_mapper.py  invalid_token_log_patch.py  login_tenant_patch.py  master_realm_auth_patch.py  openid_discovery_patch.py  user_service_patch.py
extensions/frontend/: ARCHITECTURE.md  README.md  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  vite-plugin-override-resolver.ts  vite.config.ts  vitest.config.ts
extensions/frontend/components/: VerificationBanner.tsx  index.ts
extensions/frontend/config/: variants.ts
extensions/frontend/contexts/: ExtensionContext.tsx
extensions/frontend/runtime/: wrapper.tsx
extensions/frontend/src/: App.tsx  ContainerForExtensions.tsx  helpers.tsx
extensions/frontend/types/: index.ts
extensions/frontend/views/: SampleView.tsx  index.ts
extensions/m8flow-backend/api/: keycloak_api.yml
extensions/m8flow-backend/db/: migrate.py  models.py
extensions/m8flow-frontend/: ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
extensions/m8flow-frontend/src/: App.tsx  (+1 more)
extensions/startup/: auth_patches.py  config.py  env_var_mapper.py  flask_hooks.py  guard.py  import_contracts.py  logging_setup.py  migrations.py  model_identity.py  patch_registry.py  sequence.py
keycloak-extensions/realm-info-mapper/: README.md  build.sh  pom.xml
m8flow-backend/: README.md  ruff.toml
m8flow-backend/keycloak/: KEYCLOAK_SETUP.md  start_keycloak.sh
m8flow-backend/migrations/: env.py
m8flow-backend/sample_templates/: README.md
m8flow-backend/tests/: conftest.py
m8flow-connector-proxy/: .dockerignore  Dockerfile  README.md  app.py  dev.Dockerfile  dev.docker-compose.yml  m8flow_connector_context.py  otel_setup.py  pyproject.toml
m8flow-connector-proxy/tests/: test_connector_context.py
m8flow-frontend/: ARCHITECTURE.md  eslint.config.js  index.html  package-lock.json  package.json  vite-plugin-override-resolver.ts  vite.config.ts
m8flow-frontend/docker_build/: nginx.conf.template
m8flow-frontend/public/: keycloak.json
m8flow-frontend/scripts/: patch-bpmn-labels.cjs  run-vitest-ci.cjs
m8flow-frontend/src/: App.test.tsx  App.tsx  ContainerForExtensions.test.tsx  ContainerForExtensions.tsx  i18n.ts  index.tsx  vite-env.d.ts
m8flow-nats-consumer/: Dockerfile  README.md  consumer.py  publisher.py  pyproject.toml
m8flow_runtime/: __init__.py  app.py  bootstrap.py
m8flow_runtime/startup/: auth_patches.py  flask_hooks.py  guard.py  import_contracts.py  migrations.py  patch_registry.py  routes.py  sequence.py
spiffworkflow-frontend/: package-lock.json  package.json
(+689 files in other folders)
