[tool.poetry]
name = "connector-proxy"
version = "0.1.0"
description = "M8Flow connector proxy"
license = "LGPL"
readme = "README.md"
authors = ["Andre Pestana <andre.pestana@aot-technologies.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
spiffworkflow-proxy = {git = "https://github.com/sartography/spiffworkflow-proxy"}

# M8Flow connectors --------------------
# m8flow-connector-http = { git = "https://github.com/AOT-Technologies/m8flow-connectors.git", subdirectory = "connectors/m8flow-connector-http", branch = "main" }
m8flow-connector-smtp = { git = "https://github.com/AOT-Technologies/m8flow-connectors.git", subdirectory = "connectors/m8flow-connector-smtp", branch = "main" }
connector-postgres-v2 = {git = "https://github.com/sartography/connector-postgres.git"}

# dependencies for connector
psycopg2-binary = "^2.9.9"

# Local development example
# m8flow-connector-smtp = {develop = true, path = "./m8flow-connector-smtp" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
