[tool.poetry]
package-mode = false
name = "connector-proxy"
version = "0.1.0"
description = "M8Flow connector proxy"
license = "Apache-2.0"
readme = "README.md"
authors = ["Andre Pestana <andre.pestana@aot-technologies.com>"]

[tool.poetry.dependencies]
python = ">=3.12.1,<3.13"
Flask = "^2.2.2"
gunicorn = "^23.0.0"
spiffworkflow-proxy = {git = "https://github.com/sartography/spiffworkflow-proxy"}
m8flow-connector-smtp = { git = "https://github.com/AOT-Technologies/m8flow-connectors.git", subdirectory = "connectors/m8flow-connector-smtp", tag = "1.0.0" }
m8flow-connector-slack = { git = "https://github.com/AOT-Technologies/m8flow-connectors.git", subdirectory = "connectors/m8flow-connector-slack", tag = "1.0.0" }
m8flow-connector-salesforce = { git = "https://github.com/AOT-Technologies/m8flow-connectors.git", subdirectory = "connectors/m8flow-connector-salesforce", tag = "1.0.0" }
m8flow-connector-stripe = { git = "https://github.com/AOT-Technologies/m8flow-connectors.git", subdirectory = "connectors/m8flow-connector-stripe", tag = "1.0.0" }
m8flow-connector-github = { git = "https://github.com/AOT-Technologies/m8flow-connectors.git", subdirectory = "connectors/m8flow-connector-github", rev = "b6abaef7786f6c7eabae4eb19f424124461df5e1" }
connector-postgres-v2 = { git = "https://github.com/sartography/connector-postgres.git", rev = "af95cbc52c326bc925e185009ea5888f3a5869be" }
connector-http = { git = "https://github.com/sartography/connector-http.git", tag = "v0.0.1" }
psycopg2-binary = "^2.9.9"
opentelemetry-sdk = ">=1.20.0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.20.0"
opentelemetry-instrumentation-flask = ">=0.41b0"
opentelemetry-instrumentation-logging = ">=0.41b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
